# Mu-Background

./: .gitignore  01_CMS_muons_debug.ipynb  02_Veto_study.ipynb  Digitize.sh  FullInput.sh  G4_Digi.sh  MG5_G4.sh  MG5_G4_Digi.sh  README.md  cosmic_gen.sh  data  full_sim.sh  init.sh  run_MG5.sh  run_cosmic.sh  run_cosmic_proton.sh  run_lhc_muon.sh  submit_cosmic.sh  submit_cosmic_proton.sh
Mu-Simulation/: CMakeLists.txt  GEANT4_LICENSE.txt  README.md  UnitConvention.md  digitizer  install  install_digitizer  simulation
Mu-Simulation/Digitizer/: CMakeLists.txt  README.md
Mu-Simulation/Digitizer/env/: environment.yml
Mu-Simulation/Digitizer/include/: Digitizer.hh  Geometry.hh  LinearAlgebra.hh  NoiseMaker.hh  RunManager.hh  TreeHandler.hh  globals.hh  par_handler.hh  physics.hh  util.hh
Mu-Simulation/Digitizer/run/: DataNames.txt  Parameters.txt  README.txt  mod_globs.py  par_card.txt  par_card_v2.txt  run.sh  track_directory.sh  write_root_names.sh
Mu-Simulation/Digitizer/src/: Digitizer.cc  LinearAlgebra.cc  NoiseMaker.cc  Physics.cc  RunManager.cc  globals.cc  par_handler.cc  tracking.cc
Mu-Simulation/VectorExtraction/: combine_muon_data.py  (+2 more)
analysis/: 00_analysis_config.ipynb  01_CMS_muons_debug.ipynb  02_Veto_study.ipynb  pythia_debug.ipynb
cosmic/: cosmic_check.ipynb  process_cosmic.ipynb  process_cosmic.py  process_cosmic_proton.py
par_cards/: digitizer_par_card.txt  tracker_config.py  tracker_config_llp.py
scripts/: G4History  find_prolog.py  hepmc_parser.py  muon_gun_cms.mac  muon_gun_cms_run.sh  muon_gun_cms_submit.py  py.py  slurm_log
(+175 files in other folders)
